--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" lang="en">WebStudio</a>
+            <a href="./index.html" lang="en">WebStudio</a>
             <ul>
                 <li><a href="#">Студія</a></li>
                 <li><a href="#">Портфоліо</a></li>
@@ -90,7 +90,7 @@
         </section>
     </main>
     <footer>
-        <a href="#" lang="en">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
         <address>
             <ul>
                 <li>
